--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="#">Popular Anime</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Characters</a>
+                  <a class="nav-link" href="#">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
