--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Popular Anime</a>
+                  <a class="nav-link" href="#">Popular</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html" >Gallery</a>
@@ -81,16 +81,15 @@
                     <li><a class="dropdown-item" href="#">More...</a></li>
                   </ul>
                 </li>
-                <form class="d-flex ms-auto">
-                  <input
-                    class="form-control me-2"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
-                  <button class="btn custom-search-btn" type="submit">
-                    Search
-                  </button>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Trending</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact Us</a>
+                </li>
               </ul>
             </div>
           </div>
