--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Jujutsu Kaisen</h5>
                         <p class="card-text">Cursed spirits, powerful sorcerers, and non-stop action!</p>
-                        <a href="#" class="btn btn-primary mt-2" id="crd">More Info</a>
+                        <a href="jujutsuKaisen.html" class="btn btn-primary mt-2" id="crd">More Info</a>
                     </div>
                 </div>  
             </div>
