css changes fonts/headings

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </nav>
         <div class="heading1">
-            <h1 class="text-center my-4"> ✨ Welcome to AnimeWorld ✨ </h1>
+            <h1 class="text-center my-4">  Welcome to AnimeWorld  </h1>
         </div>
         <div id="animeCarousel" class="carousel slide my-4" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -134,7 +134,7 @@
             </button>
         </div>
         <div class="heading2">
-            <h2 class="text-center my-5">🎥 Top Anime Picks 💖</h2>
+            <h2 class="text-center my-5"> Top Anime Picks </h2>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -205,7 +205,7 @@
         </div>
 
         <div class="heading2">
-            <h2 class="text-center my-5">🎌 Anime FAQs - Know Your Otaku Stuff! 💬</h2>
+            <h2 class="text-center my-5"> Anime FAQs - Know Your Otaku Stuff! </h2>
         </div>
 
         <div class="accordion my-5" id="animeAccordion">
