--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
         </nav>
 
         <div class="heading1">
-            <h1 class="text-center my-4">🎨 Image Gallery 🖼️</h1>
+            <h1 class="text-center my-4"> Image Gallery </h1>
         </div>
 
         <div class="gallery-container">
